2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/ntp.h: Removed elements "md5_caching",
	"ntp_11", "plugins_oid", and "plugins_version" from
	struct ntp_caps.

2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/scanners_utils.c(comm_send_status): Removed
	conditional for ntp_11, because this is standard for otp.

	* libopenvas/plugutils.c (scanner_add_port): Removed
	conditional for ntp_11, because this is standard for otp.

2008-09-23  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.0.beta2.SVN.

2008-09-23  Michael Wiegand <michael.wiegand@intevation.de>

	Last minute fix to MANIFEST for 2.0-beta1.

	* MANIFEST: Updated.

2008-09-23  Michael Wiegand <michael.wiegand@intevation.de>

	Doing the 2.0-beta1 release.

	* VERSION: Set to 2.0.0.beta1.

	* CHANGES: Updated.

2008-09-23  Michael Wiegand <michael.wiegand@intevation.de>

	Fixed uses of sprintf in libopenvas/plugutils.c that could lead to
	buffer overflows under certain circumstances. Told RATS and flawfinder
	to ignore the use of snprintf; we will assume that glibc provides us
	with an up-to-date snprintf. Changed "flawfinder" ignore statements to
	"RATS" since the "RATS" keyword is supported by both RATS and
	flawfinder.

	* libopenvas/plugutils.c (plug_set_id, _add_plugin_preference,
	plug_set_replace_key): Replaced sprintf usage with snprintf.

2008-09-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/plugutils.c (proto_post_wrapped): escape_crlf is
	now standard with OTP 1.0.
	Removed unused variables caps and t.

	* libopenvas/ntp.h: Removed elements "plugins_xrefs",
	"plugins_bugtraq_id", "md5_by_name", "fast_login",
	"dependencies", "plugins_cve_id", "ciphered", "escape_crlf"
	and "timestamps" from struct ntp_caps.
	Removed defines for NTP_10, NTP_11 and NTP_12.

2008-09-19  Michael Wiegand <michael.wiegand@intevation.de>

	Added support for new LOG and DEBUG messages.
