@@ -1,5 +1,13 @@
 2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
+	* libopenvas/ntp.h: Removed elements "scan_ids",
+	"dns" and "pubkey_auth" from struct ntp_caps.
+
+	* libopenvas/scanners_utils.c (comm_send_status): Removed
+	unneeded variable declaration.
+
+2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
 	* libopenvas/ntp.h: Removed elements "md5_caching",
 	"ntp_11", "plugins_oid", and "plugins_version" from
 	struct ntp_caps.
